--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,6 +24,6 @@ sphinx:
 #    - pdf
 
 # Optionally declare the Python requirements required to build your docs
-# python:
+python:
    install:
    - requirements: requirements.txt
