--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,8 +20,10 @@ sphinx:
    configuration: conf.py
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
-# formats:
-#    - pdf
+formats:
+   - html
+   - pdf
+   - epub
 
 # Optionally declare the Python requirements required to build your docs
 python:
