Add htmlzip output

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -23,6 +23,7 @@ sphinx:
 formats:
    - pdf
    - epub
+   - htmlzip
 
 # Optionally declare the Python requirements required to build your docs
 python:
