--- a/.github/workflows/pull-request-links.yaml
+++ b/.github/workflows/pull-request-links.yaml
@@ -1,14 +1,14 @@
 # .github/workflows/pull-request-links.yaml
 
 name: readthedocs/actions
-on:
-  pull_request_target:
-    types:
-      - opened
-    # Execute this action only on PRs that touch
-    # documentation files.
-    # paths:
-    #   - "docs/**"
+on: [workflow_dispatch]
+#pull_request_target:
+#  types:
+#    - opened
+#  # Execute this action only on PRs that touch
+#  # documentation files.
+#  # paths:
+#  #   - "docs/**"
 
 permissions:
   pull-requests: write
