--- a/.github/workflows/sphinx-build-pdf.yaml
+++ b/.github/workflows/sphinx-build-pdf.yaml
@@ -16,9 +16,7 @@ jobs:
       run: |
         pip install --upgrade pip 
         pip install -r requirements.txt
-    - name: Sphinx build - html
+    - name: Sphinx build - pdf
       run: |
-        make html
-    - name: Sphinx build - epub
-      run: |
-        make epub
+        sudo apt-get install -y latexmk texlive-full
+        make latexpdf
