--- a/.github/workflows/sphinx-build-pdf.yaml
+++ b/.github/workflows/sphinx-build-pdf.yaml
@@ -18,5 +18,5 @@ jobs:
         pip install -r requirements.txt
     - name: Sphinx build - pdf
       run: |
-        sudo apt-get update && sudo apt-get -y --no-install-recommends  latexmk texlive-full
+        sudo apt-get update && sudo apt-get -y --no-install-recommends install latexmk texlive-full
         make latexpdf
