--- a/.github/workflows/sphinx-build-pdf.yaml
+++ b/.github/workflows/sphinx-build-pdf.yaml
@@ -5,7 +5,6 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: readthedocs/build:6.0
     strategy:
       fail-fast: false
     steps:
@@ -19,4 +18,5 @@ jobs:
         pip install -r requirements.txt
     - name: Sphinx build - pdf
       run: |
+        sudo apt-get update && sudo apt-get -y --no-install-recommends install latexmk texlive-full
         make latexpdf
