use tabsets in quickstart instructions (#222)
* use tabsets in quickstart instructions

* use tabsets in quickstart instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ recommonmark
 sphinx-rtd-theme
 readthedocs-sphinx-ext
 jinja2
+sphinx_design
+
 # for conversion of svgs to use in latex
 cairosvg
 sphinxcontrib-svg2pdfconverter
